Added logo property to product resource