@@ -4,10 +4,10 @@ import io.swagger.annotations.Api;
 import io.swagger.annotations.ApiOperation;
 import io.swagger.annotations.ApiParam;
 import it.pagopa.selfcare.onboarding.common.InstitutionType;
-import it.pagopa.selfcare.product.entity.Product;
 import it.pagopa.selfcare.onboarding.core.ProductService;
 import it.pagopa.selfcare.onboarding.web.model.ProductResource;
 import it.pagopa.selfcare.onboarding.web.model.mapper.ProductMapper;
+import it.pagopa.selfcare.product.entity.Product;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpStatus;
@@ -16,7 +16,6 @@ import org.springframework.web.bind.annotation.*;
 
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Slf4j
 @RestController
@@ -52,13 +51,13 @@ public class ProductController {
     @ResponseStatus(HttpStatus.OK)
     @ApiOperation(value = "", notes = "${swagger.onboarding.product.api.getProducts}")
     public List<ProductResource> getProducts() {
-        log.trace("getProductsAdmin start");
+        log.trace("getProducts start");
         final List<Product> products = productService.getProducts();
         List<ProductResource> resources = products.stream()
                 .map(ProductMapper::toResource)
-                .collect(Collectors.toList());
-        log.debug("getProductsAdmin result = {}", resources);
-        log.trace("getProductsAdmin end");
+                .toList();
+        log.debug("getProducts result = {}", resources);
+        log.trace("getProducts end");
         return resources;
     }
 }
